docs: try to fix flickering

--- a/packages/docs/src/bridge.scss
+++ b/packages/docs/src/bridge.scss
@@ -6,6 +6,8 @@
   backdrop-filter: blur(10px);
   border: 1px solid rgba( 255, 255, 255, 0.18 );
   position: relative;
+  // force GPU rendering 
+   -webkit-transform:translate3d(0,0,0);
 }
 
 @mixin my($space) {
